Update package loading script to be quiet

--- a/02_Greenhouse_Trials.Rmd
+++ b/02_Greenhouse_Trials.Rmd
@@ -11,17 +11,15 @@ I'll start with biomass collected in the greenhouse. First, load some packages
 
 ```{r}
 
-library(tidyverse)
-library(broom)
-library(car)
-library(ggpubr)
-library(magick)
-library(agricolae)
-library(extrafont)
-if(any(!fonts() %in% unlist(windowsFonts()))) {
-  font_import(prompt = FALSE)
-  loadfonts(device = "win")
-} 
+suppressMessages(suppressWarnings({
+  ls <- c("tidyverse", "broom", "car", "ggpubr", "magick", "agricolae", "extrafont")
+  new_packages <- ls[!(ls %in% installed.packages()[, "Package"])]
+  if(length(new_packages)) install.packages(new_packages)
+  sapply(ls, library, character.only = TRUE, quietly = TRUE)[0]
+  if(any(!fonts() %in% unlist(windowsFonts()))) {
+    font_import(prompt = FALSE)
+    loadfonts(device = "win")}
+  rm(ls, new_packages)}))
 
 ```
 
